--- a/template.yaml
+++ b/template.yaml
@@ -1,31 +1,80 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
-Description: >
-  AWS
-
-  Saab Tools with daily useful applications!
+Description: Saab Tools with daily useful applications!
 
 Globals:
   Function:
     Timeout: 20
 
 Resources:
+  TransactionsDB:
+    Type: AWS::DynamoDB::Table
+    Properties:
+      TableName: FinanceTransaction
+      ProvisionedThroughput:
+        ReadCapacityUnits: 5
+        WriteCapacityUnits: 5
+      AttributeDefinitions:
+        - AttributeName: id
+          AttributeType: S
+      KeySchema:
+        - AttributeName: id
+          KeyType: HASH
+  RoleDynamoDbFinanceTransactionFullAccess:
+    Type: AWS::IAM::Role
+    Properties:
+      RoleName: "RoleDynamoDbFinanceTransactionFullAccess"
+      AssumeRolePolicyDocument:
+        Version: 2012-10-17
+        Statement:
+            - Effect: Allow
+              Principal:
+                Service:
+                  - lambda.amazonaws.com
+              Action:
+                - 'sts:AssumeRole'
+      Policies:
+        - PolicyName: PolicyDynamoDbFinanceTransactionFullAccess
+          PolicyDocument:
+            Version: 2012-10-17
+            Statement:
+              Effect: "Allow"
+              Action:
+                - "dynamodb:BatchGetItem"
+                - "dynamodb:BatchWriteItem"
+                - "dynamodb:ConditionCheckItem"
+                - "dynamodb:PutItem"
+                - "dynamodb:DescribeTable"
+                - "dynamodb:DeleteItem"
+                - "dynamodb:GetItem"
+                - "dynamodb:Scan"
+                - "dynamodb:Query"
+                - "dynamodb:UpdateItem"
+              Resource:
+                - "arn:aws:dynamodb:*:*:table/*/index/*"
+                - !Join
+                  - ''
+                  - - 'arn:aws:dynamodb:'
+                    - 'us-east-1:'
+                    - !Ref 'AWS::AccountId'
+                    - ':table/FinanceTransaction'
   TransactionsListFunction:
-    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
+    Type: AWS::Serverless::Function
     Properties:
       CodeUri: Finance
       Handler: com.saab.tools.finance.handler.FinanceHandler::listTransactions
       Runtime: java11
       MemorySize: 512
-      Environment: # More info about Env Vars: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#environment-object
+      Environment:
         Variables:
           PARAM1: VALUE
       Events:
         TransactionsList:
-          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
+          Type: Api
           Properties:
             Path: /finance/transactions
             Method: get
+      Role: !GetAtt RoleDynamoDbFinanceTransactionFullAccess.Arn
 
 Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
